# hs-ts

./: .gitignore  CHANGELOG.md  README.md  hs-ts.cabal  install.sh
app/: Main.hs
frontend/: package.json
frontend/src/: Api.ts  App.tsx
src/: DevTool.hs
src/DevTool/: Interface.hs
src/Web/: .API.hs.swp  API.hs  Json.hs  Server.hs
src/Web/Server/: .Static.hs.swp  Static.hs
